--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.adam.shoppinglist.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/take_picture"
+        android:title="Take Picture"/>
+    <item
+        android:id="@+id/add_item"
+        android:title="Add Item"/>
+    <item
+        android:id="@+id/clear_all"
+        android:title="Clear All"/>
+    <item
+        android:id="@+id/clear_selected"
+        android:title="Clear Selected"/>
 </menu>
